--- a/index.html
+++ b/index.html
@@ -7,6 +7,15 @@
 </head>
 <body>
     <section></section>
+    <div>
+        <span>R</span>
+        <span>A</span>
+        <span>I</span>
+        <span>N</span>
+        <span>B</span>
+        <span>O</span>
+        <span>W</span>
+    </div>
     <script src="main.js"></script>
 </body>
 </html>
